[gd_scene load_steps=5 format=2]

[ext_resource path="res://AnimatedHuman.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/JugadorClase2.gd" type="Script" id=2]
[ext_resource path="res://Scripts/ControlCamara.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 2.62411, 1 )

[node name="JugadorClase2" type="KinematicBody"]
script = ExtResource( 2 )

[node name="AnimatedHuman" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.52047, 0 )
shape = SubResource( 1 )

[node name="ControlCamara" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="ControlHorizontal" type="Spatial" parent="ControlCamara"]

[node name="ControlVertical" type="Spatial" parent="ControlCamara/ControlHorizontal"]

[node name="ClippedCamera" type="ClippedCamera" parent="ControlCamara/ControlHorizontal/ControlVertical"]
transform = Transform( -0.998827, -0.0481663, -0.00499646, -0.0470476, 0.94081, 0.335654, -0.0114665, 0.335495, -0.941972, -0.280159, 6.69871, -2.82701 )
fov = 74.5493

[node name="Frente" type="Position3D" parent="ControlCamara/ControlHorizontal/ControlVertical"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 4.59182, 1.82888 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
